checkpoint commit. Chapters 1-5 sent to Nele for proofreading.

--- a/allpapers.bib
+++ b/allpapers.bib
@@ -807,221 +807,6 @@ year = {1974}
 	year = {2010}
 }
 
-@article{Moelans2008,
-author = {Moelans, N. and Blanpain, B. and Wollants, P.},
-doi = {10.1103/PhysRevB.78.024113},
-issn = {10980121},
-journal = {Physical Review B - Condensed Matter and Materials Physics},
-keywords = {anisotropy},
-number = {2},
-title = {{Quantitative analysis of grain boundary properties in a generalized phase field model for grain growth in anisotropic systems}},
-volume = {78},
-year = {2008}
-}
-
-@article{Ravash2017,
-author = {Ravash, Hamed and Vleugels, Jef and Moelans, Nele},
-doi = {10.1007/s10853-017-1465-z},
-issn = {0022-2461},
-journal = {Journal of Materials Science},
-keywords = {Characterization and Evaluation of Materials,Classical Mechanics,Crystallography and Scattering Methods,Materials Science,Polymer Sciences,Solid Mechanics,general},
-month = {dec},
-number = {24},
-pages = {13852--13867},
-publisher = {Springer},
-title = {{Three-dimensional phase-field simulation of microstructural evolution in three-phase materials with different interfacial energies and different diffusivities}},
-
-volume = {52},
-year = {2017}
-}
-
-@article{Moelans2009,
-author = {Moelans, Nele and Wendler, Frank and Nestler, Britta},
-doi = {10.1016/j.commatsci.2009.03.037},
-issn = {0927-0256},
-journal = {Computational Materials Science},
-number = {2},
-pages = {479--490},
-publisher = {Elsevier B.V.},
-title = {{Comparative study of two phase-field models for grain growth}},
-
-volume = {46},
-year = {2009}
-}
-
-@article{Eggleston2001,
-author = {Eggleston, J.J. and McFadden, G.B. and Voorhees, P.W.},
-doi = {10.1016/S0167-2789(00)00222-0},
-issn = {01672789},
-journal = {Physica D: Nonlinear Phenomena},
-month = {mar},
-number = {1-2},
-pages = {91--103},
-publisher = {North-Holland},
-title = {{A phase-field model for highly anisotropic interfacial energy}},
-
-volume = {150},
-year = {2001}
-}
-
-
-@article{Taylor1998,
-author = {Taylor, Jean E. and Cahn, John W.},
-doi = {10.1016/S0167-2789(97)00177-2},
-issn = {01672789},
-journal = {Physica D: Nonlinear Phenomena},
-keywords = {Allen-Cahn equation,Anisotropy,Motion by weighted mean curvature,Nondifferentiable surface energy},
-month = {feb},
-number = {3-4},
-pages = {381--411},
-title = {{Diffuse interfaces with sharp corners and facets: Phase field models with strongly anisotropic surfaces}},
-
-volume = {112},
-year = {1998}
-}
-
-@article{Kobayashi2001,
-author = {Kobayashi, Ryo and Giga, Yoshikazu},
-doi = {10.1007/BF03168571},
-issn = {0916-7005},
-journal = {Japan Journal of Industrial and Applied Mathematics},
-keywords = {Anisotropy,Convexity,Crystal growth,Curvature,Facet},
-mendeley-groups = {Anisotropic_growth/experimental/review},
-month = {jun},
-number = {2},
-pages = {207--230},
-publisher = {Kinokuniya Co. Ltd},
-title = {{On anisotropy and curvature effects for growing Crystals}},
-
-volume = {18},
-year = {2001}
-}
-
-@article{Moelans2011,
-author = {Moelans, Nele},
-isbn = {1359-6454},
-issn = {13596454},
-journal = {Acta Materialia},
-keywords = {Coarsening,Growth kinetics,Multicomponent,Multiphase,Phase-field method},
-number = {3},
-pages = {1077--1086},
-publisher = {Acta Materialia Inc.},
-title = {{A quantitative and thermodynamically consistent phase-field interpolation function for multi-phase systems}},
-
-volume = {59},
-year = {2011}
-}
-
-@article{Loginova2004,
-author = {Loginova, Irina and {\AA}gren, John and Amberg, Gustav},
-doi = {10.1016/j.actamat.2004.05.033},
-file = {:C\:/Users/marti/Downloads/1-s2.0-S1359645404002952-main.pdf:pdf},
-issn = {13596454},
-journal = {Acta Materialia},
-keywords = {Diffusion,Morphological instability,Phase-field method,Widmanst{\"{a}}tten plates},
-month = {aug},
-number = {13},
-pages = {4055--4063},
-publisher = {Pergamon},
-title = {{On the formation of Widmanst{\"{a}}tten ferrite in binary Fe–C – phase-field approach}},
-
-volume = {52},
-year = {2004}
-}
-
-@article{Debierre2003,
-archivePrefix = {arXiv},
-arxivId = {cond-mat/0302368},
-author = {Debierre, Jean Marc and Karma, Alain and Celestini, Franck and Gu{\'{e}}rin, Rahma},
-doi = {10.1103/PhysRevE.68.041604},
-eprint = {0302368},
-issn = {1063651X},
-journal = {Physical Review E},
-mendeley-groups = {Anisotropic_growth,Anisotropic_growth/phase field},
-number = {4},
-pages = {1--13},
-primaryClass = {cond-mat},
-title = {{Phase-field approach for faceted solidification}},
-volume = {68},
-year = {2003}
-}
-
-@article{Moelans2010,
-author = {Moelans, N. and Spaepen, F. and Wollants, P.},
-doi = {10.1080/14786430902998129},
-file = {:C\:/Users/marti/Downloads/moelans2010.pdf:pdf},
-issn = {14786435},
-journal = {Philosophical Magazine},
-keywords = {Anisotropy,Grain boundary engineering,Grain growth,Phase-field model,Polycrystalline thin film,Texture},
-mendeley-groups = {phase-field modelling/multi-phase field},
-number = {1-4},
-pages = {501--523},
-title = {{Grain growth in thin films with a fibre texture studied by phase-field simulations and mean field modelling}},
-volume = {90},
-year = {2010}
-}
-
-@article{Miyoshi2020,
-author = {Miyoshi, Eisuke and Takaki, Tomohiro and Ohno, Munekazu and Shibuta, Yasushi},
-doi = {10.2355/isijinternational.ISIJINT-2019-305},
-file = {:C\:/Users/marti/Downloads/60_ISIJINT-2019-305.pdf:pdf},
-issn = {09151559},
-journal = {ISIJ International},
-keywords = {Grain boundary energy,Grain boundary mobility,Grain growth,Microstructure,Phase-field model},
-mendeley-groups = {phase-field modelling/multi-phase field},
-number = {1},
-pages = {160--167},
-title = {{Accuracy evaluation of phase-field models for grain growth simulation with anisotropic grain boundary properties}},
-volume = {60},
-year = {2020}
-}
-
-@article{Bulatov2014,
-author = {Bulatov, Vasily V. and Reed, Bryan W. and Kumar, Mukul},
-doi = {10.1016/j.actamat.2013.10.057},
-issn = {13596454},
-journal = {Acta Materialia},
-keywords = {Crystal structure,Grain boundary energy,Lattice geometry,Misorientation,Modeling},
-mendeley-groups = {Anisotropic_growth/Grain boundary energy},
-pages = {161--175},
-publisher = {Acta Materialia Inc.},
-title = {{Grain boundary energy function for fcc metals}},
-
-volume = {65},
-year = {2014}
-}
-
-@article{Olmsted2009,
-author = {Olmsted, David L. and Foiles, Stephen M. and Holm, Elizabeth A.},
-doi = {10.1016/j.actamat.2009.04.007},
-file = {:C\:/Users/marti/Downloads/1-s2.0-S1359645409002274-main.pdf:pdf},
-issn = {13596454},
-journal = {Acta Materialia},
-keywords = {Grain boundary energy,Grain boundary structure,Molecular statics simulations},
-mendeley-groups = {Anisotropic_growth/Grain boundary energy},
-number = {13},
-pages = {3694--3703},
-publisher = {Acta Materialia Inc.},
-title = {{Survey of computed grain boundary properties in face-centered cubic metals: I. Grain boundary energy}},
-
-volume = {57},
-year = {2009}
-}
-
-@article{Rohrer2011,
-author = {Rohrer, Gregory S.},
-doi = {10.1007/s10853-011-5677-3},
-file = {:C\:/Users/marti/Downloads/Rohrer2011_Article_GrainBoundaryEnergyAnisotropyA.pdf:pdf},
-issn = {00222461},
-journal = {Journal of Materials Science},
-mendeley-groups = {Anisotropic_growth/Grain boundary energy},
-number = {18},
-pages = {5881--5895},
-title = {{Grain boundary energy anisotropy: A review}},
-volume = {46},
-year = {2011}
-}
-
 @article{Bao2017,
    author = {Weizhu Bao and Wei Jiang and David J. Srolovitz and Yan Wang},
    doi = {10.1137/16M1091599},
@@ -1366,3 +1151,232 @@ year = {2023}
    IGNOREurl = {https://www.tandfonline.com/doi/full/10.1080/10408436.2017.1397500},
    year = {2017},
 }
+
+@article{Granasy2007,
+   author = {László Gránásy and Tamás Pusztai and David Saylor and James A. Warren},
+   doi = {10.1103/PhysRevLett.98.035703},
+   issn = {0031-9007},
+   issue = {3},
+   journal = {Physical Review Letters},
+   month = {1},
+   pages = {035703},
+   title = {Phase Field Theory of Heterogeneous Crystal Nucleation},
+   volume = {98},
+   url = {https://link.aps.org/doi/10.1103/PhysRevLett.98.035703},
+   year = {2007},
+}
+
+@article{Daubner2023,
+   author = {Simon Daubner and Paul W. Hoffrogge and Martin Minar and Britta Nestler},
+   doi = {10.1016/j.commatsci.2022.111995},
+   issn = {09270256},
+   journal = {Computational Materials Science},
+   keywords = {Benchmark,Multi-order parameter models,Multiphase-field models,Phase-field method,Triple junction},
+   month = {2},
+   publisher = {Elsevier B.V.},
+   title = {Triple junction benchmark for multiphase-field and multi-order parameter models},
+   volume = {219},
+   year = {2023},
+}
+
+@article{Minar2022dataset,
+author = {Minar, M.},
+doi = {10.17632/5wrv3ky9pp.2},
+title = {{Benchmarking of different strategies to include anisotropy in a curvature-driven multi-phase-field model}},
+url = {http://dx.doi.org/10.17632/5wrv3ky9pp.2},
+journal ={Mendeley Data, v2},
+year = {2022}
+}
+
+@article{Hoffman1972,
+   author = {David W. Hoffman and John W. Cahn},
+   doi = {10.1016/0039-6028(72)90268-3},
+   issn = {00396028},
+   issue = {C},
+   journal = {Surface Science},
+   pages = {368-388},
+   title = {A vector thermodynamics for anisotropic surfaces. I. Fundamentals and application to plane surface junctions},
+   volume = {31},
+   year = {1972},
+}
+
+
+@article{Miura2013,
+   author = {Hitoshi Miura},
+   doi = {10.1016/j.jcrysgro.2013.01.014},
+   issn = {00220248},
+   journal = {Journal of Crystal Growth},
+   keywords = {A1. Anisotropic kinetics,A1. Computer simulation,A1. Crystal morphology,A1. Phase-field,B1. Alloys},
+   pages = {8-17},
+   publisher = {Elsevier},
+   title = {Anisotropy function of kinetic coefficient for phase-field simulations: Reproduction of kinetic Wulff shape with arbitrary face angles},
+   volume = {367},
+   url = {http://dx.doi.org/10.1016/j.jcrysgro.2013.01.014},
+   year = {2013},
+}
+
+@article{Wheeler2006,
+   author = {A. A. Wheeler},
+   doi = {10.1098/rspa.2006.1721},
+   issn = {14712946},
+   issue = {2075},
+   journal = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+   keywords = {Anisotropy,Interface,Phase-field,Regularization,Surface energy},
+   pages = {3363-3384},
+   title = {Phase-field theory of edges in an anisotropic crystal},
+   volume = {462},
+   year = {2006},
+}
+
+@article{Yadav2018,
+   author = {Vishal Yadav and Nele Moelans},
+   doi = {10.1016/j.actamat.2018.04.056},
+   issn = {13596454},
+   journal = {Acta Materialia},
+   keywords = {Grain growth,Grain topology,Simulations,Volumetric growth rate},
+   pages = {275-286},
+   publisher = {Elsevier Ltd},
+   title = {Analysis of grain topology and volumetric growth rate relation in three-dimensional normal grain growth},
+   volume = {156},
+   url = {https://doi.org/10.1016/j.actamat.2018.04.056},
+   year = {2018},
+}
+
+@article{Chen1994,
+   author = {Long-Qing Chen and Wei Yang},
+   doi = {10.1103/PhysRevB.50.15752},
+   issn = {0163-1829},
+   issue = {21},
+   journal = {Physical Review B},
+   month = {12},
+   pages = {15752-15756},
+   title = {Computer simulation of the domain dynamics of a quenched system with a large number of nonconserved order parameters: The grain-growth kinetics},
+   volume = {50},
+   url = {https://link.aps.org/doi/10.1103/PhysRevB.50.15752},
+   year = {1994},
+}
+
+@article{Steinbach1996,
+   author = {I Steinbach and F Pezzolla and B Nestler and M Sedklberg and R G J Ptieler and J L L Rezende},
+   journal = {Physica D},
+   pages = {135-147},
+   title = {A phase field concept for multiphase systems},
+   volume = {94},
+   url = {https://doi.org/10.1016/0167-2789(95)00298-7},
+   year = {1996},
+}
+
+@article{Daubner2023,
+   author = {Simon Daubner and Paul W. Hoffrogge and Martin Minar and Britta Nestler},
+   doi = {10.1016/J.COMMATSCI.2022.111995},
+   issn = {0927-0256},
+   journal = {Computational Materials Science},
+   month = {2},
+   pages = {111995},
+   publisher = {Elsevier},
+   title = {Triple junction benchmark for multiphase-field and multi-order parameter models},
+   volume = {219},
+   url = {https://www.sciencedirect.com/science/article/abs/pii/S0927025622007066},
+   year = {2023},
+}
+
+@article{Minar2022,
+   author = {Martin Minar and Nele Moelans},
+   doi = {10.1103/PhysRevMaterials.6.103404},
+   issn = {2475-9953},
+   issue = {10},
+   journal = {Physical Review Materials},
+   month = {10},
+   pages = {103404},
+   publisher = {American Physical Society},
+   title = {Benchmarking of different strategies to include anisotropy in a curvature-driven multi-phase-field model},
+   volume = {6},
+   url = {https://link.aps.org/doi/10.1103/PhysRevMaterials.6.103404},
+   year = {2022},
+}
+
+@article{Chen2015,
+   author = {Lei Chen and Hao Wei Zhang and Lin Yun Liang and Zhe Liu and Yue Qi and Peng Lu and James Chen and Long Qing Chen},
+   doi = {10.1016/j.jpowsour.2015.09.055},
+   issn = {03787753},
+   journal = {Journal of Power Sources},
+   keywords = {Dendrite,Electrodeposition,Lithium-ion battery,Phase-field model},
+   pages = {376-385},
+   publisher = {Elsevier B.V},
+   title = {Modulation of dendritic patterns during electrodeposition: A nonlinear phase-field model},
+   volume = {300},
+   url = {http://dx.doi.org/10.1016/j.jpowsour.2015.09.055},
+   year = {2015},
+}
+
+
+@article{Minar2024,
+   author = {Martin Minar and Nele Moelans},
+   doi = {10.1016/J.COMMATSCI.2023.112575},
+   issn = {0927-0256},
+   journal = {Computational Materials Science},
+   month = {1},
+   pages = {112575},
+   publisher = {Elsevier},
+   title = {Influence of surface energy anisotropy on nucleation and crystallographic texture of polycrystalline deposits},
+   volume = {231},
+   url = {https://www.sciencedirect.com/science/article/abs/pii/S0927025623005694},
+   year = {2024},
+}
+
+@article{Guyer2004a,
+   author = {J. E. Guyer and W. J. Boettinger and J. A. Warren and G. B. McFadden},
+   doi = {10.1103/PhysRevE.69.021603},
+   issn = {1539-3755},
+   issue = {2},
+   journal = {Physical Review E},
+   month = {2},
+   pages = {021603},
+   publisher = {American Physical Society},
+   title = {Phase field modeling of electrochemistry. I. Equilibrium},
+   volume = {69},
+   url = {https://link.aps.org/doi/10.1103/PhysRevE.69.021603},
+   year = {2004},
+}
+
+@article{Guyer2004b,
+   author = {J. E. Guyer and W. J. Boettinger and J. A. Warren and G. B. McFadden},
+   doi = {10.1103/PhysRevE.69.021604},
+   issn = {1539-3755},
+   issue = {2},
+   journal = {Physical Review E},
+   month = {2},
+   pages = {021604},
+   title = {Phase field modeling of electrochemistry. II. Kinetics},
+   volume = {69},
+   url = {http://arxiv.org/abs/cond-mat/0308179%0Ahttp://dx.doi.org/10.1103/PhysRevE.69.021604 https://link.aps.org/doi/10.1103/PhysRevE.69.021604},
+   year = {2004},
+}
+
+@article{Nestler2008,
+   author = {Britta Nestler and Frank Wendler and Michael Selzer and Björn Stinner and Harald Garcke},
+   doi = {10.1103/PhysRevE.78.011604},
+   issn = {15393755},
+   issue = {1},
+   journal = {Physical Review E - Statistical, Nonlinear, and Soft Matter Physics},
+   pages = {1-7},
+   title = {Phase-field model for multiphase systems with preserved volume fractions},
+   volume = {78},
+   year = {2008},
+}
+
+@article{Yadav2018vol_cons,
+   author = {Vishal Yadav and Nele Moelans},
+   doi = {10.1016/j.scriptamat.2017.11.023},
+   issn = {13596462},
+   journal = {Scripta Materialia},
+   keywords = {Bulk diffusion,Grain growth,Phase field model,Simulations},
+   pages = {142-145},
+   publisher = {Acta Materialia Inc.},
+   title = {Comparison of coarsening behaviour in non-conserved and volume-conserved isotropic two-phase grain structures},
+   volume = {146},
+   url = {https://doi.org/10.1016/j.scriptamat.2017.11.023},
+   year = {2018},
+}
+
+
