PF nucleation barrier - particle on a GB, results in place, most of the explanations. To improve introduction and smoothen the many rough places. The shape factor for Wuff shape is probably necessary, yet to be developed

--- a/thesis.tex
+++ b/thesis.tex
@@ -108,7 +108,7 @@
 \usepackage{rotate}
 \usepackage{tikz}
 \usepackage{pgfplots}
-\usetikzlibrary{calc,external,arrows}
+\usetikzlibrary{calc,external,arrows,math}
 
 \def\red{\color{red}}
 \def\gr{\color{green}}
@@ -151,7 +151,6 @@
 %\listoftables
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \mainmatter % to get \pagenumbering{arabic}
 
 % Show instructions on a separate page
@@ -163,7 +162,7 @@
 %\includechapter{04PFMoelans} 
 %\includechapter{05paper1} 
 \includechapter{06PFnucleationBarrier} 
-\includechapter{06paper2} 
+%\includechapter{06paper2} 
 %\includechapter{90conclusion}
 
 
