commit before major outline change - 1) add enough literature review to give the work more context 2) strictly separate own contribution from the literature review 3) 2 papers to be intact one after another

--- a/thesis.tex
+++ b/thesis.tex
@@ -129,7 +129,7 @@
 %\frontmatter % to get \pagenumbering{roman}
 
 %\includepreface{preface}
-%\includeabstract{abstract}
+\includeabstract{abstract}
 %\includeabstractnl{abstractnl}
 
 % To create a list of abbreviations, there are 2 options
@@ -156,14 +156,14 @@
 % Show instructions on a separate page
 %\instructionschapters\cleardoublepage
 
-%\includechapter{01introduction}
-%\includechapter{02anisoIEintro}
-%\includechapter{03PFintro} 
-%\includechapter{04PFMoelans} 
-%\includechapter{05paper1} 
+\includechapter{01introduction}
+\includechapter{02anisoIEintro}
+\includechapter{03PFintro} 
+\includechapter{04PFMoelans} 
+\includechapter{05paper1} 
 \includechapter{06PFnucleationBarrier} 
-%\includechapter{06paper2} 
-%\includechapter{90conclusion}
+\includechapter{06paper2} 
+\includechapter{90conclusion}
 
 
 
@@ -171,11 +171,11 @@
 
 \appendix
 
-%\includeappendix{91functionalDerivative} 
-%\includeappendix{92PFderivations} 
-%\includeappendix{93PFparametersDetermination} 
-%\includeappendix{94NumericalImplementation} 
-%\includeappendix{95LagrangeMultipliersPF} 
+\includeappendix{91functionalDerivative} 
+\includeappendix{92PFderivations} 
+\includeappendix{93PFparametersDetermination} 
+\includeappendix{94NumericalImplementation} 
+\includeappendix{95LagrangeMultipliersPF} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\backmatter
