Most of introduction written, goals missing

--- a/allpapers.bib
+++ b/allpapers.bib
@@ -1145,7 +1145,7 @@ year = {2023}
    journal = {Critical Reviews in Solid State and Materials Sciences},
    keywords = {Phase field model,microstructure evolution,extract},
    pages = {1-38},
-   publisher = {Taylor & Francis},
+   publisher = {Taylor \& Francis},
    title = {Phase-Field Modelling in Extractive Metallurgy},
    volume = {0},
    IGNOREurl = {https://www.tandfonline.com/doi/full/10.1080/10408436.2017.1397500},
@@ -1164,19 +1164,6 @@ year = {2023}
    volume = {98},
    url = {https://link.aps.org/doi/10.1103/PhysRevLett.98.035703},
    year = {2007},
-}
-
-@article{Daubner2023,
-   author = {Simon Daubner and Paul W. Hoffrogge and Martin Minar and Britta Nestler},
-   doi = {10.1016/j.commatsci.2022.111995},
-   issn = {09270256},
-   journal = {Computational Materials Science},
-   keywords = {Benchmark,Multi-order parameter models,Multiphase-field models,Phase-field method,Triple junction},
-   month = {2},
-   publisher = {Elsevier B.V.},
-   title = {Triple junction benchmark for multiphase-field and multi-order parameter models},
-   volume = {219},
-   year = {2023},
 }
 
 @article{Minar2022dataset,
@@ -1213,19 +1200,6 @@ year = {2022}
    volume = {367},
    url = {http://dx.doi.org/10.1016/j.jcrysgro.2013.01.014},
    year = {2013},
-}
-
-@article{Wheeler2006,
-   author = {A. A. Wheeler},
-   doi = {10.1098/rspa.2006.1721},
-   issn = {14712946},
-   issue = {2075},
-   journal = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
-   keywords = {Anisotropy,Interface,Phase-field,Regularization,Surface energy},
-   pages = {3363-3384},
-   title = {Phase-field theory of edges in an anisotropic crystal},
-   volume = {462},
-   year = {2006},
 }
 
 @article{Yadav2018,
@@ -1369,8 +1343,8 @@ year = {2022}
    author = {Vishal Yadav and Nele Moelans},
    doi = {10.1016/j.scriptamat.2017.11.023},
    issn = {13596462},
-   journal = {Scripta Materialia},
    keywords = {Bulk diffusion,Grain growth,Phase field model,Simulations},
+   journal = {Scripta Materialia},
    pages = {142-145},
    publisher = {Acta Materialia Inc.},
    title = {Comparison of coarsening behaviour in non-conserved and volume-conserved isotropic two-phase grain structures},
@@ -1379,4 +1353,188 @@ year = {2022}
    year = {2018},
 }
 
+
+@article{Damjanovic1966,
+author = {Damjanovic, A. and Setty, T. H. V. and Bockris, J. O'M.},
+journal = {J. Electrochem. Soc.},
+month = {5},
+number = {5},
+pages = {429},
+publisher = {The Electrochemical Society},
+title = {{Effect of Crystal Plane on the Mechanism and the Kinetics of Copper Electrocrystallization}},
+url = {http://jes.ecsdl.org/cgi/doi/10.1149/1.2423989},
+volume = {113},
+year = {1966}
+}
+
+@article{Tran2016,
+author = {Tran, Richard and Xu, Zihan and Radhakrishnan, Balachandran and Winston, Donald and Sun, Wenhao and Persson, Kristin A. and Ong, Shyue Ping},
+issn = {2052-4463},
+journal = {Sci. Data},
+month = {12},
+number = {1},
+pages = {160080},
+title = {{Surface energies of elemental crystals}},
+url = {http://www.nature.com/articles/sdata201680},
+volume = {3},
+year = {2016}
+}
+
+@article{Wang2000,
+author = {Wang, S.G. and Tian, E.K. and Lung, C.W.},
+journal = {J. Phys. Chem. Solids},
+mendeley-groups = {Anisotropic{\_}growth,Anisotropic{\_}growth/surface energy},
+month = {8},
+number = {8},
+pages = {1295--1300},
+publisher = {Pergamon},
+title = {{Surface energy of arbitrary crystal plane of bcc and fcc metals}},
+url = {https://www.sciencedirect.com/science/article/pii/S0022369799004151},
+volume = {61},
+year = {2000}
+}
+
+@article{Salvalaglio2015,
+   author = {Marco Salvalaglio and Rainer Backofen and Roberto Bergamaschini and Francesco Montalenti and Axel Voigt},
+   doi = {10.1021/acs.cgd.5b00165},
+   issn = {1528-7483},
+   issue = {6},
+   journal = {Crystal Growth \& Design},
+   month = {6},
+   pages = {2787-2794},
+   title = {Faceting of Equilibrium and Metastable Nanostructures: A Phase-Field Model of Surface Diffusion Tackling Realistic Shapes},
+   volume = {15},
+   url = {https://pubs.acs.org/doi/10.1021/acs.cgd.5b00165},
+   year = {2015},
+}
+
+@book{Dinnebier2008,
+    author = {Dinnebier, R E and Billinge, S J L},
+    title = "{Powder Diffraction: Theory and Practice}",
+    publisher = {The Royal Society of Chemistry},
+    year = {2008},
+    month = {03},
+    isbn = {978-0-85404-231-9},
+    doi = {10.1039/9781847558237},
+    url = {https://doi.org/10.1039/9781847558237},
+}
+
+@article{Szpunar1997,
+  title={Texture in films and Coatings},
+  author={Szpunar, Jerzy A},
+  journal={MRS Online Proceedings Library (OPL)},
+  volume={472},
+  pages={45},
+  year={1997},
+  publisher={Cambridge University Press}
+}
+
+@book{Suwas2014,
+   author = {Satyam Suwas and Ranjit Kumar Ray},
+   city = {London},
+   doi = {10.1007/978-1-4471-6314-5},
+   isbn = {978-1-4471-6313-8},
+   publisher = {Springer London},
+   title = {Crystallographic Texture of Materials},
+   url = {https://link.springer.com/10.1007/978-1-4471-6314-5},
+   year = {2014},
+}
+
+@book{Schlesinger2006,
+   author = {Mordechay Schlesinger and Milan Paunovic},
+   edition = {2nd},
+   isbn = {9780471712213},
+   pages = {374},
+   title = {Fundamentals of Electrochemical Deposition},
+   year = {2006},
+}
+
+@article{Winand1992,
+   author = {René Winand},
+   doi = {10.1016/0304-386X(92)90033-V},
+   issn = {0304386X},
+   issue = {1-3},
+   journal = {Hydrometallurgy},
+   month = {6},
+   pages = {567-598},
+   title = {Electrocrystallization - theory and applications},
+   volume = {29},
+   url = {https://linkinghub.elsevier.com/retrieve/pii/0304386X9290033V},
+   year = {1992},
+}
+
+@article{Barna1998,
+   author = {P.B Barna and M Adamik},
+   doi = {10.1016/S0040-6090(97)00503-8},
+   issn = {0040-6090},
+   issue = {1-2},
+   journal = {Thin Solid Films},
+   month = {4},
+   pages = {27-33},
+   publisher = {Elsevier},
+   title = {Fundamental structure forming phenomena of polycrystalline films and the structure zone models},
+   volume = {317},
+   url = {https://www.sciencedirect.com/science/article/abs/pii/S0040609097005038},
+   year = {1998},
+}
+
+@article{Abadias2018,
+   author = {Grégory Abadias and Eric Chason and Jozef Keckes and Marco Sebastiani and Gregory B. Thompson and Etienne Barthel and Gary L. Doll and Conal E. Murray and Chris H. Stoessel and Ludvik Martinu},
+   doi = {10.1116/1.5011790},
+   issn = {0734-2101},
+   issue = {2},
+   journal = {Journal of Vacuum Science \& Technology A: Vacuum, Surfaces, and Films},
+   keywords = {X-ray diffraction,coatings,crystal microstructure,focused ion beam technology,internal stresses,plasma CVD,stress relaxation,thin films},
+   month = {3},
+   pages = {020801},
+   publisher = {American Vacuum Society},
+   title = {Review Article: Stress in thin films and coatings: Current status, challenges, and prospects},
+   volume = {36},
+   url = {http://avs.scitation.org/doi/10.1116/1.5011790},
+   year = {2018},
+}
+
+
+@article{Thornton1989,
+   author = {John A. Thornton and D.W. Hoffman},
+   doi = {10.1016/0040-6090(89)90030-8},
+   issn = {0040-6090},
+   issue = {1},
+   journal = {Thin Solid Films},
+   month = {4},
+   pages = {5-31},
+   publisher = {Elsevier},
+   title = {Stress-related effects in thin films},
+   volume = {171},
+   url = {https://www.sciencedirect.com/science/article/pii/0040609089900308},
+   year = {1989},
+}
+
+@article{Chason2015,
+   author = {Eric Chason and Alison M. Engwall},
+   doi = {10.1016/j.tsf.2015.06.061},
+   issn = {00406090},
+   journal = {Thin Solid Films},
+   keywords = {Deposition,Polycrystalline,Residual stress,Stress,Thin films,Wafer curvature},
+   pages = {2-7},
+   publisher = {Elsevier B.V.},
+   title = {Relating residual stress to thin film growth processes via a kinetic model and real-time experiments},
+   volume = {596},
+   url = {http://dx.doi.org/10.1016/j.tsf.2015.06.061},
+   year = {2015},
+}
+
+@article{Chason2002,
+   author = {E. Chason and B. W. Sheldon and L. B. Freund and J. A. Floro and S. J. Hearne},
+   doi = {10.1103/PhysRevLett.88.156103},
+   isbn = {0031-9007},
+   issn = {10797114},
+   issue = {15},
+   journal = {Physical Review Letters},
+   pages = {4},
+   pmid = {11955209},
+   title = {Origin of Compressive Residual Stress in Polycrystalline Thin Films},
+   volume = {88},
+   year = {2002},
+}
 
