--- a/thesis.tex
+++ b/thesis.tex
@@ -25,7 +25,7 @@
 \supervisor{Prof.~dr.~ir.~Nele~Moelans}{}
 \supervisor{Prof.~dr.~ir.~S.~Leader}{}
 \president{Prof.~dr.~ir.~The~Chairman}{}
-\jurymember{Prof.~dr.~ir.~The~One}{}
+\jurymember{Prof.~dr.~ir.~Marc~Seefeldt}{}
 \jurymember{Prof.~dr.~ir.~The~Other}{}
 \externaljurymember{Prof.~dr.~External~Jurymember}{Far Away}
 
@@ -159,7 +159,7 @@
 \includechapter{01introduction}
 \includechapter{02anisoIEintro}
 \includechapter{03PFintro} 
-\includechapter{04PFMoelans} 
+%\includechapter{04PFMoelans} 
 \includechapter{05paper1} 
 \includechapter{06PFnucleationBarrier} 
 \includechapter{06paper2} 
@@ -171,11 +171,12 @@
 
 \appendix
 
-\includeappendix{91functionalDerivative} 
-\includeappendix{92PFderivations} 
-\includeappendix{93PFparametersDetermination} 
-\includeappendix{94NumericalImplementation} 
-\includeappendix{95LagrangeMultipliersPF} 
+%\includeappendix{91functionalDerivative} 
+%\includeappendix{92PFderivations} 
+%\includeappendix{93PFparametersDetermination} 
+%\includeappendix{94NumericalImplementation} 
+%\includeappendix{95LagrangeMultipliersPF} 
+%\includeappendix{96WulffProperties} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\backmatter
@@ -186,6 +187,7 @@
 %\bibliography{allpapers}
 % BibLatex (comment lines above and comment out biblatex lines in preamble)
 \printbibliography[title=\bibname]
+%\printbibliography[title=allpapers]
 %\instructionsbibliography
 
 %\includecv{curriculum}
