txs auto checkin

--- a/thesis.tex
+++ b/thesis.tex
@@ -91,7 +91,8 @@
   hyperref=auto,
   mincrossrefs=999,
   backend=biber,
-  style=numeric-comp
+  style=numeric-comp,
+  sorting=none
 ]{biblatex}
 \addbibresource{allpapers.bib}
 
@@ -109,6 +110,7 @@
 \usepackage{tikz}
 \usepackage{pgfplots}
 \usetikzlibrary{calc,external,arrows,math}
+\usepackage{tabularx}
 
 \def\red{\color{red}}
 \def\gr{\color{green}}
