txs auto checkin

--- a/thesis.tex
+++ b/thesis.tex
@@ -164,7 +164,7 @@
 %\includechapter{04PFMoelans} 
 %\includechapter{05paper1} 
 %\includechapter{06PFnucleationBarrier} 
-%\includechapter{06paper2} 
+\includechapter{06paper2} 
 %\includechapter{90conclusion}
 
 
