txs auto checkin

--- a/combine_graphs/sketches_intro.tex
+++ b/combine_graphs/sketches_intro.tex
@@ -82,8 +82,9 @@
 			\draw (0.3,1.2) -- ++(-150:0.7) -- ++(0:0.3) node [right] {$\alpha_2$} arc (0:30:0.3) ;
 			\draw (0.1,-1.1) -- ++(65-180:0.7) -- ++(0:0.3) node [right] {$\alpha_1$} arc (0:65:0.3) ;
 			
-			\draw (-2.5,1.5) node [right] {liquid};
-			\draw (-2.5,-2.5) node [right] {substrate};
+			\draw (-3,1.5) node [right] {liquid};
+			\draw (-3,-2.5) node [right] {substrate};
+			\draw (-1.5,0.6) node [right] {part.};
 		\end{axis}
 	\end{tikzpicture}
 
